Add <!--more--> marker

--- a/_drafts/2018-12-19-avl-trees.md
+++ b/_drafts/2018-12-19-avl-trees.md
@@ -17,6 +17,8 @@ AVL trees (named after their inventors, Adelson-Velskii and Landis) were the fir
 
 This type of tree allows you to perform insertions, deletions and searches in O(log n). This tree keeps track of the heights of all the nodes. Every time one node is inserted or deleted, the balancing factor (difference between the heights of left and right subtree) of its ancestors is checked. If the balancing factor is greater than 1 or lower than -1, then the tree is rebalanced.
 
+<!--more-->
+
 ## Search
 
 Searching in an AVL tree works exactly the same as searching in a regular BST.
