Fix avl trees permalink

--- a/_posts/2018-12-19-avl-trees.md
+++ b/_posts/2018-12-19-avl-trees.md
@@ -3,7 +3,7 @@ title: AVL Trees
 author: adrian.ancona
 layout: post
 date: 2018-12-19
-permalink: /2018/12/binary-search-trees/
+permalink: /2018/12/avl-trees/
 tags:
   - programming
   - javascript
